--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -53,7 +53,8 @@
     "scheduler": "0.19.1",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "ws": "^6.1.4"
   },
   "devDependencies": {
     "@office-iss/rex-win32": "0.62.7-tenantreactnativewin-13222",
@@ -71,14 +72,14 @@
     "just-scripts": "^0.36.1",
     "prettier": "1.19.1",
     "react": "16.13.1",
-    "react-native": "0.0.0-423155127",
+    "react-native": "0.0.0-f8e5423c8",
     "react-native-platform-override": "^0.3.2",
     "react-shallow-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-native": "0.0.0-423155127"
+    "react-native": "0.0.0-f8e5423c8"
   },
   "beachball": {
     "defaultNpmTag": "canary",
