--- a/vnext/package.json
+++ b/vnext/package.json
@@ -53,7 +53,8 @@
     "scheduler": "0.19.1",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "ws": "^6.1.4"
   },
   "devDependencies": {
     "@microsoft/api-documenter": "^7.3.8",
@@ -68,7 +69,7 @@
     "just-scripts": "^0.36.1",
     "prettier": "1.19.1",
     "react": "16.13.1",
-    "react-native": "0.0.0-423155127",
+    "react-native": "0.0.0-f8e5423c8",
     "react-native-platform-override": "^0.3.2",
     "react-native-windows-codegen": "0.1.7",
     "react-refresh": "^0.4.0",
@@ -77,7 +78,7 @@
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-native": "0.0.0-423155127"
+    "react-native": "0.0.0-f8e5423c8"
   },
   "beachball": {
     "defaultNpmTag": "canary",
