--- a/vnext/Microsoft.ReactNative.Managed.CodeGen/Microsoft.ReactNative.Managed.CodeGen.csproj
+++ b/vnext/Microsoft.ReactNative.Managed.CodeGen/Microsoft.ReactNative.Managed.CodeGen.csproj
@@ -30,6 +30,16 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.7.0" />
     <PackageReference Include="RuntimeContracts" Version="0.3.0" />
+
+    <!-- 
+      NuGet decides to pull in packages with issues. There is no seeming way to diagnose why NuGet is pulling in those versions. 
+      Running restore with -Verbosity Detailed and environment variables:
+       * NUGET_RESTORE_MSBUILD_ARGS=/bl:c:\temp\nuget.binlog
+       * NUGET_RESTORE_MSBUILD_VERBOSITY=diag
+      resulted in no mention of version 4.3.0 anywhere until NuGet just starts downloading it.
+      Therefore manually overriding the version so NuGet uses the latest.
+    -->
+     <PackageReference Include="System.Private.Uri" Version="4.3.2" />
   </ItemGroup>
 
   <!-- 
