--- a/package.json
+++ b/package.json
@@ -48,11 +48,12 @@
     "@wdio/utils": "5.12.1",
     "acorn": "^7.1.1",
     "bl": "3.0.1",
+    "eslint-plugin-react-hooks": "4.0.7",
+    "eslint-plugin-react": "^7.14.1",
     "hermes-engine-comment": "The hermes-engine resolution can be removed when we integrate the 9/17 Nightly RN Build",
     "hermes-engine": "0.7.0",
     "logkitty": "^0.7.1",
-    "eslint-plugin-react": "^7.14.1",
-    "eslint-plugin-react-hooks": "4.0.7",
+    "minimist": "1.2.5",
     "webdriver": "git+https://github.com/react-native-windows/webdriver.git",
     "webdriverio": "5.12.1"
   },
