New versions and structure

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "packages": [
       "packages/*",
       "packages/@react-native-windows/*",
+      "packages/@react-native/*",
       "packages/@rnw-scripts/*",
       "vnext"
     ]
