--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -10,6 +10,7 @@
     "windows": "react-native run-windows"
   },
   "dependencies": {
+    "@react-native-windows/tester": "0.0.1",
     "react": "16.13.1",
     "react-native": "0.0.0-12543d557",
     "react-native-windows": "0.0.0-canary.178"
