--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@wdio/sync": "5.12.1",
     "@wdio/utils": "5.12.1",
     "appium-android-driver": "4.12.0-stub.0",
+    "appium-selendroid-driver": "1.13.4-stub.0",
     "appium-tizen-driver": "1.1.1-stub.0",
     "hermes-engine-comment": "The hermes-engine resolution can be removed when we integrate the 9/17 Nightly RN Build",
     "hermes-engine": "0.7.0",
