--- a/vnext/package.json
+++ b/vnext/package.json
@@ -122,6 +122,7 @@
     "/index.windows.js.map",
     "/interface.js",
     "/just-task.js",
+    "/LICENCE",
     "/metro-react-native-platform.js",
     "/metro.config.js",
     "/react-native.config.js",
