Consolidate WebSocket modules (#6169)
* Move WebSocketModule out of the Desktop project

* Add CreateModules.cpp

* Define define resource and module factories

* Drop direct include of WebSocketModuleUwp

* Change files

* clang format

* Fix Utils filter

* Remane react::uwp::WebSocketModule to LegacyWebSocketModule

* Define QuirkSettings::SetUseLegacyWebSocketModule

* Remove if-defs from OInstance

* clang format

* Revert changes to OInstance

* Remove NativeModuleFactories.h

* Drop static qualifier from ReactProperty return values

* Drop unused mutable qualifier

* clang format

--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -430,6 +430,7 @@
     <ClCompile Include="Modules\AppStateModule.cpp" />
     <ClCompile Include="Modules\AppThemeModuleUwp.cpp" />
     <ClCompile Include="Modules\ClipboardModule.cpp" />
+    <ClCompile Include="Modules\CreateModules.cpp" />
     <ClCompile Include="Modules\DeviceInfoModule.cpp" />
     <ClCompile Include="Modules\DevSettingsModule.cpp" />
     <ClCompile Include="Modules\I18nManagerModule.cpp" />
