--- a/packages/@rnw-scripts/integrate-rn/package.json
+++ b/packages/@rnw-scripts/integrate-rn/package.json
@@ -23,15 +23,22 @@
     "yargs": "^15.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
     "@rnw-scripts/eslint-config": "0.1.4",
+    "@rnw-scripts/jest-unittest-config": "0.1.1",
     "@rnw-scripts/just-task": "0.0.6",
     "@rnw-scripts/ts-config": "0.1.0",
     "@types/async": "^3.2.3",
+    "@types/jest": "^26.0.13",
     "@types/lodash": "^4.14.161",
     "@types/ora": "^3.2.0",
     "@types/semver": "^7.3.3",
     "@types/yargs": "^15.0.5",
+    "babel-jest": "^26.3.0",
     "eslint": "6.8.0",
+    "jest": "^26.4.2",
     "just-scripts": "^0.44.7",
     "prettier": "1.19.1",
     "typescript": "^3.8.3"
