--- a/packages/react-native-platform-override/package.json
+++ b/packages/react-native-platform-override/package.json
@@ -22,6 +22,7 @@
     "react-native-platform-override": "./bin.js"
   },
   "dependencies": {
+    "@rnw-scripts/package-utils": "^0.0.8",
     "async": "^3.2.0",
     "chalk": "^4.1.0",
     "fp-ts": "^2.5.0",
