Integrate 8/25 Nightly RN Build
Commits: https://github.com/facebook/react-native/compare/12543d557...9b973f32e

This is the last build before the RNTester redesign. No non-mechanical changes needed that I could find.

--- a/packages/@react-native-windows/tester/package.json
+++ b/packages/@react-native-windows/tester/package.json
@@ -11,8 +11,10 @@
     "validate-overrides": "react-native-platform-override validate"
   },
   "dependencies": {
-    "@react-native/tester": "0.0.1",
-    "react-native": "0.0.0-12543d557",
+    "@react-native/tester": "0.0.1"
+  },
+  "peerDependencies": {
+    "react-native": "0.0.0-9b973f32e",
     "react-native-windows": "^0.0.0-canary.185"
   },
   "devDependencies": {
