--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -37,10 +37,10 @@
     "hermes-engine": "~0.6.0",
     "invariant": "^2.2.4",
     "jsc-android": "^245459.0.0",
-    "metro-babel-register": "0.62.0",
-    "metro-react-native-babel-transformer": "0.62.0",
-    "metro-runtime": "0.62.0",
-    "metro-source-map": "0.62.0",
+    "metro-babel-register": "0.63.0",
+    "metro-react-native-babel-transformer": "0.63.0",
+    "metro-runtime": "0.63.0",
+    "metro-source-map": "0.63.0",
     "nullthrows": "^1.1.1",
     "pretty-format": "^26.0.1",
     "promise": "^8.0.3",
@@ -64,21 +64,21 @@
     "@types/prop-types": "15.5.1",
     "@types/react": "16.9.0",
     "@types/react-native": "^0.63.18",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^10.1.0",
     "eslint": "6.8.0",
-    "flow-bin": "^0.131.0",
+    "flow-bin": "^0.132.0",
     "jscodeshift": "^0.9.0",
     "just-scripts": "^0.44.7",
     "prettier": "1.19.1",
     "react": "16.13.1",
-    "react-native": "0.0.0-12543d557",
+    "react-native": "0.0.0-9b973f32e",
     "react-native-platform-override": "^0.4.0",
     "react-shallow-renderer": "^16.13.1",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-native": "0.0.0-12543d557"
+    "react-native": "0.0.0-9b973f32e"
   },
   "beachball": {
     "defaultNpmTag": "canary",
