--- a/vnext/.flowconfig
+++ b/vnext/.flowconfig
@@ -8,6 +8,7 @@
 ; These modules have base components and Windows versions.
 ; Ideally we'd delete the base versions of files that had .windows overrides as part of the
 ; initRNLibraries build step
+<PROJECT_ROOT>/index.js
 <PROJECT_ROOT>/Libraries/Alert/Alert.js
 <PROJECT_ROOT>/Libraries/Components/Button.js
 <PROJECT_ROOT>/Libraries/Components/Picker/Picker.js
@@ -35,9 +36,11 @@
 ; Ignore react-native files in node_modules since they are copied into project root
 .*/node_modules/react-native/.*
 
-; Ignore react-native-windows' target folder. Flow is not compiled with long path support and after running unittests these folders have long paths
+; Ignore react-native-windows' build output. Flow is not compiled with long path support and after running unittests these folders have long paths
+.*/node_modules/react-native-windows/build/.*
 .*/node_modules/react-native-windows/target/.*
 .*/node_modules/react-native-windows/Microsoft.ReactNative.Managed.CodeGen.UnitTests/.*
+.*/node_modules/react-native-windows/Microsoft.ReactNative.Managed.UnitTests/.*
 .target/.*
 
 ; These files dont need to be checked and just increase the build time
@@ -131,4 +134,4 @@ untyped-import
 untyped-type-import
 
 [version]
-^0.131.0
+^0.132.0
