--- a/packages/react-native-win32-tester/package.json
+++ b/packages/react-native-win32-tester/package.json
@@ -15,14 +15,16 @@
   },
   "peerDependencies": {
     "react-native": "0.0.0-9b973f32e",
-    "react-native-windows": "^0.0.0-canary.185"
+    "@office-iss/react-native-win32": "^0.0.0-canary.185"
   },
   "devDependencies": {
     "@rnw-scripts/eslint-config": "0.1.4",
     "@rnw-scripts/ts-config": "0.1.0",
     "eslint": "6.8.0",
     "just-scripts": "^0.44.7",
+    "react-native": "0.0.0-9b973f32e",
     "react-native-platform-override": "^0.4.0",
+    "@office-iss/react-native-win32": "^0.0.0-canary.185",
     "typescript": "^3.8.3"
   }
 }
