--- a/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.CSharpApp.props
+++ b/vnext/PropertySheets/External/Microsoft.ReactNative.Uwp.CSharpApp.props
@@ -8,6 +8,11 @@
   Do not make any changes here unless it applies to ALL such projects.
 -->
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <!-- Keeping this at the top of the imports ensures we can use the autolinking 
+       process to set properties without having to edit the project file -->
+  <Import Project="$(ProjectDir)\AutolinkedNativeModules.g.props"
+          Condition="Exists('$(ProjectDir)\AutolinkedNativeModules.g.props')" />
+
   <PropertyGroup>
     <ReactNativeCodeGenEnabled Condition="'$(ReactNativeCodeGenEnabled)' == ''">true</ReactNativeCodeGenEnabled>
   </PropertyGroup>
