Update Rex to avoid color asserts

--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -13,9 +13,9 @@
     "lint:fix": "just-scripts lint:fix",
     "lint": "just-scripts lint",
     "api": "just-scripts api",
-    "run-win32-dev-web": "npx @office-iss/rex-win32@0.62.7-tenantreactnativewin-13222 --bundle js/RNTesterApp --component RNTesterApp --basePath ./dist/win32/dev --useDevMain --useWebDebugger",
-    "run-win32-devmain": "npx @office-iss/rex-win32@0.62.7-tenantreactnativewin-13222 --bundle js/RNTesterApp --component RNTesterApp --basePath ./dist/win32/dev --useDevMain",
-    "run-win32": "npx @office-iss/rex-win32@0.62.7-tenantreactnativewin-13222 --bundle js/RNTesterApp --component RNTesterApp --basePath ./dist/win32/dev",
+    "run-win32-dev-web": "npx @office-iss/rex-win32@0.62.12-devmain.13422.10000 --bundle js/RNTesterApp --component RNTesterApp --basePath ./dist/win32/dev --useDevMain --useWebDebugger",
+    "run-win32-devmain": "npx @office-iss/rex-win32@0.62.12-devmain.13422.10000 --bundle js/RNTesterApp --component RNTesterApp --basePath ./dist/win32/dev --useDevMain",
+    "run-win32": "npx @office-iss/rex-win32@0.62.12-devmain.13422.10000 --bundle js/RNTesterApp --component RNTesterApp --basePath ./dist/win32/dev",
     "start": "react-native start --projectRoot ../react-native-win32-tester",
     "validate-overrides": "react-native-platform-override validate"
   },
