--- a/.ado/templates/e2e-test-job.yml
+++ b/.ado/templates/e2e-test-job.yml
@@ -39,6 +39,7 @@ jobs:
         inputs:
           script: regedit /S $(Build.SourcesDirectory)\.ado\ReactUWPTestApp.reg
           workingDirectory: $(Build.SourcesDirectory)
+        condition: false # Must be manually enabled, since it causes a 5x perf reduction that causes test instability
 
       - task: CmdLine@2
         displayName: run-windows
