More Permissive Retry Logic for Verdaccio
Fixes #6313

These are some of the reccomened solutions from the commentary in #6313. There are a couple more tweaks we can try, but these should hopefully alleviate Verdaccio issues.

--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -111,6 +111,10 @@ steps:
       npm set registry http://localhost:4873
     displayName: Modify default npm config to point to local verdaccio server
 
+  - script: |
+      npm set fetch-retries 10
+    displayName: Allow additional npm fetch retries
+
   - task: CmdLine@2
     displayName: Apply windows template (with nuget)
     inputs:
