--- a/package.json
+++ b/package.json
@@ -50,10 +50,12 @@
     "appium-android-driver": "4.12.0-stub.0",
     "appium-selendroid-driver": "1.13.4-stub.0",
     "appium-tizen-driver": "1.1.1-stub.0",
-    "hermes-engine-comment": "The hermes-engine resolution can be removed when we integrate the 9/17 Nightly RN Build",
-    "hermes-engine": "0.7.0",
+    "dot-prop": "4.2.1",
     "eslint-plugin-react": "^7.14.1",
     "eslint-plugin-react-hooks": "4.0.7",
+    "hermes-engine-comment": "The hermes-engine resolution can be removed when we integrate the 9/17 Nightly RN Build",
+    "hermes-engine": "0.7.0",
+    "kind-of": "6.0.3",
     "node-fetch": "2.6.1",
     "webdriver": "git+https://github.com/react-native-windows/webdriver.git",
     "webdriverio": "5.12.1",
